# Python-Stdlib

./: .gitignore  README.md  setup.json  stdlib.py
egg/: bits.py  clock.py  colorful.py  encoda.py  fs.py  globerr.py  glue.py  indexy.py  listery.py  listself.py  logic-test.py  logic.py  parser.py  string.py
egg/transpiler/: README.md  cdepency.py  cglob.py  cpkg.py  ctypesDSL.py  ctyping.py  variable.py
module/: __init__.py  pyproject.toml
tests/: test1.py
